tests/ui/duplicate_params.stderr
error: identifier `value` is bound more than once in this parameter list
[tests/ui/duplicate_params.pea:1:15-1:19] error: used as parameter more than once

error: aborting due to 1 previous error

